apps/jellyfin/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin
  namespace: apps
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`jellyfin.ramoneees.com`)
      kind: Rule
      services:
        - name: jellyfin
          port: 8096
  tls:
    secretName: wildcard-ramoneees-com-tls
